force-app/main/default/objects/Program_Session__c/Program_Session__c.object-meta.xml
<CustomObject>
    <description>Junction object connecting Program with Attendee</description>
    <label>Program Session</label>
    <nameField>
        <displayFormat>Session-{0000}</displayFormat>
        <label>Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>