force-app/main/default/objects/Program_Session__c/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <description>Count of individual attendance records from Attendance tab.</description>
    <inlineHelpText>Count of individual attendance records from Attendance tab.</inlineHelpText>
    <label>Attendees</label>
    <summaryForeignKey>Program_Attendance__c.Program_Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>