force-app/main/default/objects/Program_Session__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Session meeting date</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>