force-app/main/default/objects/Program_Session__c/listViews/Upcoming_Sessions.listView-meta.xml
<ListView>
    <fullName>Upcoming_Sessions</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:30</value>
    </filters>
    <label>Upcoming Sessions</label>
</ListView>